// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works with different buttons 1`] = `
.c0 > :nth-child(n) {
  border-radius: 0;
}

.c0 > :not(:last-child):nth-child(n) {
  margin-right: 0;
}

.c0 > :not(:first-child):nth-child(n) {
  border-left-width: 0;
  margin-left: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.25rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #17a3a5;
  color: white;
  border-color: #1a8385;
}

.c1:hover {
  cursor: pointer;
  background-color: #1a8385;
  color: white;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #1a8385;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #1a8385;
  color: white;
}

.c2 {
  border-style: solid;
  text-align: center;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.25rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #ebc764;
  color: white;
  border-color: #937032;
}

.c2:hover {
  cursor: pointer;
  background-color: #937032;
  color: white;
}

.c2:hover:disabled {
  cursor: not-allowed;
  background-color: #937032;
}

.c2:disabled {
  opacity: 0.7;
  background-color: #937032;
  color: white;
}

.c3 {
  border-style: solid;
  text-align: center;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.25rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #72af5d;
  color: white;
  border-color: #548230;
}

.c3:hover {
  cursor: pointer;
  background-color: #548230;
  color: white;
}

.c3:hover:disabled {
  cursor: not-allowed;
  background-color: #548230;
}

.c3:disabled {
  opacity: 0.7;
  background-color: #548230;
  color: white;
}

<div
  class="c0"
  role="group"
>
  <button
    class="c1"
    type="button"
  >
    Button
  </button>
  <button
    class="c2"
    type="button"
  >
    Button
  </button>
  <button
    class="c3"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`it works with same buttons 1`] = `
.c0 > :nth-child(n) {
  border-radius: 0;
}

.c0 > :not(:last-child):nth-child(n) {
  margin-right: 0;
}

.c0 > :not(:first-child):nth-child(n) {
  border-left-width: 0;
  margin-left: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.25rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #17a3a5;
  color: white;
  border-color: #1a8385;
}

.c1:hover {
  cursor: pointer;
  background-color: #1a8385;
  color: white;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #1a8385;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #1a8385;
  color: white;
}

<div
  class="c0"
  role="group"
>
  <button
    class="c1"
    type="button"
  >
    Button
  </button>
  <button
    class="c1"
    type="button"
  >
    Button
  </button>
  <button
    class="c1"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`it works with two buttons 1`] = `
.c0 > :nth-child(n) {
  border-radius: 0;
}

.c0 > :not(:last-child):nth-child(n) {
  margin-right: 0;
}

.c0 > :not(:first-child):nth-child(n) {
  border-left-width: 0;
  margin-left: 0;
}

.c1 {
  border-style: solid;
  text-align: center;
  font-size: 1rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 2;
  border-radius: 0.25rem;
  border-width: 1px;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1),0 1px 2px 0 rgba(0,0,0,0.06);
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  background-color: #17a3a5;
  color: white;
  border-color: #1a8385;
}

.c1:hover {
  cursor: pointer;
  background-color: #1a8385;
  color: white;
}

.c1:hover:disabled {
  cursor: not-allowed;
  background-color: #1a8385;
}

.c1:disabled {
  opacity: 0.7;
  background-color: #1a8385;
  color: white;
}

<div
  class="c0"
  role="group"
>
  <button
    class="c1"
    type="button"
  >
    Button
  </button>
  <button
    class="c1"
    type="button"
  >
    Button
  </button>
</div>
`;
